SPレイアウト調整

--- a/_includes/info-dream.liquid
+++ b/_includes/info-dream.liquid
@@ -1,6 +1,6 @@
 <p>【幻想掌編集 / 文庫判 / オンデマンドフルカラー表紙 / 54ページ】</p>
 <p class="book-info__copy">忘れがたい風景たちへ。</p>
-<p>彼らは唯の夢だから、本当は何も語らない。<br>彼らは唯の夢であり、物語でも何でもない。<br>彼らは唯の夢だけど——</p>
+<p class="font-sansserif-jp">彼らは唯の夢だから、本当は何も語らない。<br>彼らは唯の夢であり、物語でも何でもない。<br>彼らは唯の夢だけど——</p>
 <p>◇　◆　◇</p>
 <p>本書は、著者の夢日記を元に創作された幻想掌編集です。<br>Twitterへ投稿した140字の夢日記から、当時見た夢を思い出し、ときには改変し、修飾して、忘れてしまった箇所は空想で繋ぎあわせながら、六つの掌編を書き起こしました。<br>
 いずれも厳密には夢そのものではなく、物語としては筋書きが曖昧で、詩と呼ぶには少々長すぎる。<br>
@@ -24,7 +24,7 @@
   </ul>
   <p>※収録作品はすべて書き下ろしです。</p>
 
-  <blockquote>
+  <blockquote class="font-sansserif-jp">
     <p>何故そんなことを気にしたのか、夢の中のわたしは知らない。<br>分からない。気づきもしない。口元を見せて笑いあう、お客たちの誰に聞いても答えは返ってこないだろう。<br>これは唯の夢、現実から遠く離れ、——すべてが自由であるはずの国。</p>
   </blockquote>
 
