--- a/_includes/snippet-firstview-item.liquid
+++ b/_includes/snippet-firstview-item.liquid
@@ -5,7 +5,7 @@
   </figure>
   <div class="home__firstview-image__txt font-serif-jp">
     <p>夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
-    <div class="align-right">
+    <div class="home__firstview-morelink">
       <a href="/book/trees_light/">『すべての樹木は光』<span>詳細ページへ</span></a>
     </div>
   </div>
@@ -17,7 +17,7 @@
   </figure>
   <div class="home__firstview-image__txt font-serif-jp">
     <p>何故そんなことを気にしたのか、夢の中のわたしは知らない。分からない。気づきもしない。口元を見せて笑いあう、お客たちの誰に聞いても答えは返ってこないだろう。<br>これは唯の夢、現実から遠く離れ、——すべてが自由であるはずの国。</p>
-    <div class="align-right">
+    <div class="home__firstview-morelink">
       <a href="/book/dream/">『彼らは唯の夢』<span>詳細ページへ</span></a>
     </div>
   </div>
