ランダムファーストビュー調整

--- a/_includes/snippet-firstview-item.liquid
+++ b/_includes/snippet-firstview-item.liquid
@@ -1,5 +1,5 @@
 <div class="home__firstview-bg home__firstview-item hidden">
-  <figure class="home__firstview-image">
+  <figure class="home__firstview-image for-tree">
     <img src="/assets/img/mv_treeislight.jpg" alt="" width="2000">
     <figcaption>書籍表紙装画：<a href="https://twitter.com/sunamerius" target="_blank" rel="noopenner noreferrer">佐野裕一さん</a></figcaption>
   </figure>
@@ -11,14 +11,26 @@
   </div>
 </div>
 <div class="home__firstview-bg home__firstview-item hidden">
-  <figure class="home__firstview-image">
-    <img src="/assets/img/hyoushi-dream.jpg" alt="" width="2000">
+  <figure class="home__firstview-image for-dream">
+    <img src="/assets/img/mv_dream_pc.jpg" srcset="/assets/img/mv_dream_sp.jpg 767w, /assets/img/mv_dream_pc.jpg 1280w" sizes="(max-width: 767px) 250px, 100vw" alt="" width="2000">
     <figcaption>書籍表紙装画：<a href="https://rimmsrims.webnode.jp/" target="_blank" rel="noopenner noreferrer">ほがり仰夜さん</a></figcaption>
   </figure>
   <div class="home__firstview-image__txt font-serif-jp">
     <p>何故そんなことを気にしたのか、夢の中のわたしは知らない。分からない。気づきもしない。口元を見せて笑いあう、お客たちの誰に聞いても答えは返ってこないだろう。<br>これは唯の夢、現実から遠く離れ、——すべてが自由であるはずの国。</p>
     <div class="home__firstview-morelink">
       <a href="/book/dream/">『彼らは唯の夢』<span>詳細ページへ</span></a>
+    </div>
+  </div>
+</div>
+<div class="home__firstview-bg home__firstview-item hidden">
+  <figure class="home__firstview-image for-vacation">
+    <img src="/assets/img/mv_vacation.jpg" srcset="/assets/img/mv_vacation_sp.jpg 767w, /assets/img/mv_vacation.jpg 1280w" sizes="(max-width: 767px) 250px, 100vw" alt="" width="2000">
+    <figcaption>表紙写真撮影：風野湊</figcaption>
+  </figure>
+  <div class="home__firstview-image__txt font-serif-jp">
+    <p>枯れ葉に覆われた林床の小道は先へ進むほどに細くなり、曲がりくねり、薄暗くなっていった。日光を奪いあうように樹木たちは巨大化し、はるか頭上の樹冠からこぼれる千々の光は無数の銀河を抱く虚空のようにも見えた。足元から樹冠へ至るまでの長大な距離にあらゆる緑が氾濫している。</p>
+    <div class="home__firstview-morelink">
+      <a href="/book/postcard_6/">「樹木のバカンス」<span>詳細ページへ</span></a>
     </div>
   </div>
 </div>
