--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -177,6 +177,9 @@ blockquote {
 	padding-left: 0.8em;
 	font-size: 1.05em;
 	opacity: 0.8;
+	@media (max-width: $sp-width) {
+		font-size: 1em;
+	}
 }
 .list {
 	&__style--dot {
@@ -686,12 +689,26 @@ blockquote {
 			width: 100%;
 			height: 100%;
 			position: absolute;
-			background: transparent linear-gradient(180deg, #00000033 0%, #00000000 0%, #000000 100%) 0% 0% no-repeat padding-box;
-			opacity: 0.6;
+			opacity: 0.5;
 			top: 0;
 			left: 0;
 			content: "";
 			z-index: 5;
+		}
+		&.for-tree::before {
+			opacity: 0.7;
+			background: transparent linear-gradient(180deg, #00000033 0%, #00000000 0%, #000000 100%) 0% 0% no-repeat padding-box;
+		}
+		&.for-vacation::before {
+			opacity: 0.8;
+			background: transparent linear-gradient(180deg, #00000033 0%, #00000000 0%, #000000 100%) 0% 0% no-repeat padding-box;
+			@media (max-width: $sp-width) {
+				opacity: 1;
+			}
+		}
+		&.for-dream::before {
+			opacity: 0.5;
+			background: transparent linear-gradient(180deg, #48423b33 0%, #48423b00 0%, #48423b 100%) 0% 0% no-repeat padding-box;
 		}
 		&__txt {
 			position: relative;
@@ -799,6 +816,7 @@ blockquote {
 	}
 }
 .random-novel {
+	margin-top: 2rem;
 	margin-bottom: 2rem;
 	padding: 6.5rem 0;
 	@media (max-width: $sp-width) {
