--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -423,7 +423,7 @@ blockquote {
 			padding: 1rem;
 			transition: 0.3s ease-in-out;
 			@media (max-width: $sp-width) {
-				padding: 1rem 0;
+				padding: 1rem 0.5rem;
 			}
 			&:hover {
 				background-color: rgba($color: $keyColor, $alpha: 0.05);	
@@ -641,10 +641,23 @@ blockquote {
 		padding: 4rem 0;
 		z-index: 10;
 		@media (max-width: $sp-width) {
-			padding: 2em 0;
+			padding: 2rem 0 8rem;
+		}
+		.logo__wrapper {
+			position: absolute;
+			right: 4rem;
+	    bottom: 2rem;
+			@media (max-width: $sp-width) {
+				bottom: 0.5rem;
+				right: 4.266vw;
+			}
 		}
 		.logo__image {
 			margin-bottom: 1.5rem;
+			@media (max-width: $sp-width) {
+				width: 12rem;
+				height: auto;
+			}
 		}
 	}
 	&__firstview-bg {
