--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -28,14 +28,14 @@
     <meta property="og:title" content="{%- if title == blank -%}呼吸書房 // 風野湊 Official Website{%- else -%}{{ title }}｜呼吸書房{%- endif -%}" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
-    <meta property="og:image" content="/assets/img/ogp.png" />
+    <meta property="og:image" content="https://kokyushobo.com/assets/img/ogp.png" />
     <meta property="og:site_name" content="呼吸書房" />
     <meta property="og:locale" content="ja_JP" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@feelingskyblue" />
     <meta name="twitter:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
-    <meta name="twitter:image:src" content="/assets/img/ogp.png" />
+    <meta name="twitter:image:src" content="https://kokyushobo.com/assets/img/ogp.png" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-08Z4HYPJRN"></script>
