--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -832,6 +832,8 @@ blockquote {
 	padding: 6.5rem 0;
 	@media (max-width: $sp-width) {
 		padding: 4rem 0;
+		margin-top: 0;
+		margin-bottom: 2rem;
 	}
 	&__item {
 		padding-top: 1em;
