--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -174,7 +174,7 @@
   <section class="novel-list__section">
     <header class="novel-list__header">
       <h3 class="novel-list__title font-serif">Recommend pickup</h3>
-      <p class="novel-list__description">当サイトで公開している小説の中から、おすすめの作品をトップページにピックアップしました。ときどき入れ替わります:) <br>もっと読みたい！という方は、<a href="/novel">小説一覧ページ</a>へどうぞ。当サイトのすべての小説を一覧にしてあります。</p>
+      <p class="novel-list__description">当サイトで公開している小説の中から、おすすめの作品をトップページにピックアップしました。ときどき入れ替わります:) <br>もっと読みたい方は、ぜひ<a href="/novel">小説一覧ページ</a>へ。当サイトのすべての小説を一覧にしてあります。</p>
       <a href="/novel" class="btn btn--small btn--pale"><span>小説一覧ページへ</span></a>
     </header>
     <div class="list novel-list">
