--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -858,7 +858,13 @@ blockquote {
 		}
 	}
 	&__footer {
+		font-size: 0.9em;
 		text-align: right;
+		margin-top: 1em;
+		line-height: 1.8;
+	}
+	&__title {
+		opacity: 0.5;
 	}
 }
 
