--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,6 +27,10 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
+	@media (max-width: $sp-width) {
+		font-size: min((100vw - 3rem) / 24, 1.6rem);
+		letter-spacing: 0;
+	}
 }
 
 body.fixed {
@@ -313,6 +317,7 @@ blockquote {
 		@media (max-width: $sp-width) {
 			display: block;
 			margin-bottom: 2rem;
+			font-size: inherit;
 			li {
 				margin-bottom: 0.8rem;
 			}
@@ -827,6 +832,13 @@ blockquote {
 		font-weight: normal;
 		font-size: 2.4rem;
 		margin-right: 1em;
+	}
+}
+.novel-list__section .novel-list__description {
+	@media (max-width: $sp-width) {
+		font-size: 1em;
+		line-height: inherit;
+		margin-top: 1rem;
 	}
 }
 .random-novel {
