--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -279,8 +279,49 @@ blockquote {
 }
 
 // Common
-.header {
+body {
+	&.homePage {
+		.header {
+			display: none;
+		}
+	}
+	&:not(.homePage) {
+		.main {
+			padding-top: 6rem;
+		}
+	}
+}
 
+.header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	//background-color: rgba($color: $bgColor, $alpha: 0.8);
+	z-index: 10;
+	width: 100%;
+	height: 6rem;
+	@include flex;
+	align-items: center;
+	//border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.3);
+	//box-shadow: 0 0 4rem rgba($color: #48423b, $alpha: 0.1);
+	.logo__image {
+		width: 12rem;
+		height: auto;
+		@media (max-width: $sp-width) {
+			width: 10rem;
+		}
+	}
+	&__inner {
+		width: 100%;
+		@include flex;
+		justify-content: flex-end;
+		align-items: center;
+	}
+	&__menu {
+		a {
+			border-bottom: none;
+		}
+	}
 }
 .main {
 	min-height: calc(100dvh -  20rem);
@@ -636,6 +677,11 @@ blockquote {
 		height: auto;
 		position: relative;
 		padding-top: 15dvh;
+		//padding-top: 6rem;
+		//min-height: 100dvh;
+		@include flex;
+		flex-direction: column;
+		justify-content: flex-end;
 		@media (max-width: $sp-width) {
 			padding-top: 4rem;
 		}
@@ -656,6 +702,7 @@ blockquote {
 			position: absolute;
 			right: 4rem;
 	    bottom: -0.5rem;
+			//display: none;
 			@media (max-width: $sp-width) {
 				bottom: -5rem;
 				//right: 4.266vw;
@@ -700,6 +747,7 @@ blockquote {
 			z-index: 6;
 			opacity: 0.7;
 			font-size: 1.2rem;
+			text-shadow: 0 0 0.15em #00000011, 0 0 0.5em #00000066;
 			@media (max-width: $sp-width) {
 				left: initial;
 				right: 2rem;
@@ -743,6 +791,7 @@ blockquote {
 			color: $bgColor;
 			z-index: 10;
 			font-size: 1.5rem;
+			text-shadow: 0 0 0.15em #00000011, 0 0 0.5em #00000066;
 			@media (max-width: $sp-width) {
 				margin: 3rem auto 0;
 				padding-bottom: calc(4rem + 1.5em);
@@ -918,9 +967,10 @@ blockquote {
 		}
 	}
 	&__wrapper {
-		padding: 4rem 0 0;
+		//padding: 4rem 0 0;
+		padding: 0;
 		@media (max-width: $sp-width) {
-			padding: 3rem 0 4rem;
+			padding: 0 0 4rem;
 		}
 		&[data-shadow="true"] {
 			max-width: 72rem;
