a要素の色変更
見出し文字色と差別化する

--- a/assets/scss/core/_utility.scss
+++ b/assets/scss/core/_utility.scss
@@ -4,7 +4,7 @@ $textColor: #181614; //#231916;
 $bgColor: #fefbf9;
 $keyColor: #37807a; //37807a 49aaa3 //#55acee
 $keyColorDark: #29605c;
-$subColor: #000000;
+$subColor: #48423b;
 
 // FlexBox
 @mixin flex($flex-wrap: nowrap) {
