--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -381,6 +381,12 @@ body {
 	&__info {
 		text-align: right;
 		line-height: 1.3;
+		a {
+			display: inline-block;
+		}
+		small {
+			display: block;
+		}
 	}
 }
 .book-tab__wrapper {
