--- a/_includes/layout-novel.liquid
+++ b/_includes/layout-novel.liquid
@@ -18,6 +18,8 @@ template: novelPage
         <p>短編集『<a href="/book/eien">永遠の不在をめぐる</a>』掲載作品</p>
       {%- elsif tag == 'book-paperplane' -%}
         <p>短編集『<a href="/book/paperplane">紙飛行機に眠る月</a>』掲載作品</p>
+      {%- elsif tag == 'book-dream' -%}
+        <p>短編集『<a href="/book/dream">彼らは唯の夢</a>』掲載作品</p>
       {%- endif -%}
     {%- endfor -%}
     {%- if improvise_theme != blank -%}
