--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -4,6 +4,8 @@
     {% assign novels-paperplane = novels-paperplane | concat: novel %}
   {%- elsif novel.data.tags contains 'book-eien' -%}
     {% assign novels-eien = novels-eien | concat: novel %}
+  {%- elsif novel.data.tags contains 'book-dream' -%}
+    {% assign novels-dream = novels-dream| concat: novel %}
   {%- elsif novel.data.tags contains 'improvise' -%}
     {% assign novels-improvise = novels-improvise | concat: novel %}
   {%- endif -%}
@@ -65,17 +67,18 @@
   <h3 class="novel-list__title font-serif">掌編・短編小説（一話完結）</h3>
 </header>
 <div class="novel-list__wrapper">
-{% comment %}
-  <section class="novel-list__section">
-    <h3 class="novel-list__title font-serif">彼らは唯の夢</h3>
-    <p class="novel-list__description">ランダムなお題を元に15分で執筆する「即興小説トレーニング（2023年サービス終了）」に投稿した掌編の一部を改稿・公開しています。</p>
+  <section class="novel-list__section is-dream">
+    <header class="novel-list__header">
+      <h3 class="novel-list__title font-serif">彼らは唯の夢</h3>
+      <p class="novel-list__description">夢日記に基づく幻想掌編集。収録作品6編のうち3編を公開しています。いずれも厳密には夢そのものではなく、物語としては筋書きが曖昧で、詩と呼ぶには長すぎる。最も近い言葉は「風景」なのだろうと思います。</p>
+      <a href="/book/dream" class="btn btn--small btn--pale"><span>書籍紹介へ</span></a>
+    </header>
     <div class="list novel-list">
-      {% for novel in novels-improvise %}
+      {% for novel in novels-dream %}
         {%- include '_includes/snipet-novel-item' -%}
       {% endfor %}
     </div>
   </section>
-{% endcomment %}
   <section class="novel-list__section" id="novelImprovise">
     <header class="novel-list__header">
       <h3 class="novel-list__title font-serif">即興小説</h3>
@@ -90,7 +93,7 @@
   <section class="novel-list__section is-eien" id="novelEien">
     <header class="novel-list__header">
       <h3 class="novel-list__title font-serif">永遠の不在をめぐる</h3>
-      <p class="novel-list__description">2015年に刊行した幻想短編集より、即興小説から生まれた4編を公開しています。</p>
+      <p class="novel-list__description">「不在」をテーマにした、ふたつめの幻想短編集。収録作品7編のうち4編を公開しています。何かを失い、あるいは投げ捨て、もしくは奪われた人々の、永遠に埋まらない空席を眺めつづけるような物語。</p>
       <a href="/book/eien" class="btn btn--small btn--pale"><span>書籍紹介へ</span></a>
     </header>
     <div class="list novel-list">
@@ -102,7 +105,7 @@
   <section class="novel-list__section is-paperplane" id="novelPaperplane">
     <header class="novel-list__header">
       <h3 class="novel-list__title font-serif">紙飛行機に眠る月</h3>
-      <p class="novel-list__description">呼吸書房の原点、2012年に刊行した短編集です。収録作品の一部を公開しています。</p>
+      <p class="novel-list__description">呼吸書房の原点、2012年に刊行した短編集です。収録作品9編のうち4編を公開しています。作品ジャンルはSF、寓話童話、ファンタジー、現代ものと様々で、各編ごとに文体も異なります。</p>
       <a href="/book/paperplane" class="btn btn--small btn--pale"><span>書籍紹介へ</span></a>
     </header>
     <div class="list novel-list">
