--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -943,6 +943,13 @@ body {
 .random-novel {
 	margin-top: 2rem;
 	padding: 6.5rem 0;
+	.novel-list__page & {
+		margin-top: 0;
+		padding: 6.5rem 0 0;
+		@media (max-width: $sp-width) {
+			border-top: 1px solid rgba($color: $keyColor, $alpha: 0.1);
+		}
+	}
 	@media (max-width: $sp-width) {
 		padding: 4rem 0;
 		margin-top: 0;
