『すべての樹木は光』試し読みの量を増やす

--- a/_includes/layout-novel_tree.liquid
+++ b/_includes/layout-novel_tree.liquid
@@ -2,7 +2,7 @@
 layout: layout.liquid
 template: novelPage
 ---
-
+<script src="/assets/js/novel_tree.js" defer></script>
 <article class="novel font-serif">
   <header class="novel__header">
     <h1 class="novel__header-title">{{ title }}</h1>
@@ -10,23 +10,29 @@ template: novelPage
   {% comment %}
     マウス動かしたらメニュー表示させたい　stoneぽく
   {% endcomment %}
-  <div>
+  <blockquote>
     <p>以前には、この他人への心配りこそが彼の誇りだった。<br>
     フランツ・カフカ『変身』</p>
+  </blockquote>
+  <blockquote>
     <p>どうしてもどうしてもさびしくてたまらないときは<br>
     ひとはみんなきっとこういうことになる<br>
     きみたちとけふあうことができたので<br>
     わたくしはこの巨きな旅のなかの一つづりから<br>
     血みどろになって遁げなくてもいいのです<br>
     宮沢賢治『小岩井農場　パート九』</p>
+  </blockquote>
 {% comment %}
 スクロールで背景色の変わる仕組みを入れたいな。。
 ふむ、画像も置けるね　とはいえこのへんは専用レイアウトファイルにしてあげたいかな。。
 <img class="" src="/assets/img/mv_treeislight.jpg" alt="" loading="lazy" width="2000">
 {% endcomment %}
+  <div class="novel__body tree_is_light__body">
+  {{ content }}
   </div>
-  <div class="novel__body">{{ content }}</div>
   <div class="novel__footer">
-    <a href="/">TOPへ戻る</a>
+    <hr>
+    <p>そのようにして、魔法は失われた。<br>以降の本文は書籍でお楽しみください。</p>
+    <a href="/book/trees_light/">『すべての樹木は光』詳細ページへ</a>
   </div>
 </article>
