--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -10,7 +10,6 @@
     {% assign novels-improvise = novels-improvise | concat: novel %}
   {%- endif -%}
 {%- endfor -%}
-{% comment %}
 <header class="novel-list__category-header">
   <h3 class="novel-list__title font-serif">長編小説</h3>
 </header>
@@ -29,13 +28,13 @@
         </a>
       </article>
       <article class="novel-list__item">
-        <a href="/book/trees_light/introduction" class="unstyle novel-list__item-link">
+        <a href="/book/trees_light/introduction#section1" class="unstyle novel-list__item-link">
           <h4 class="novel-list__item-title"><span class="font-serif">第一章　歌う雨の町</span></h4>
           <span class="novel-list__catchcopy">「……この町では鉢植えをベッドに寝かせるの？」</span>
         </a>
       </article>
       <article class="novel-list__item">
-        <a href="/book/trees_light/introduction" class="unstyle novel-list__item-link">
+        <a href="/book/trees_light/introduction#section2" class="unstyle novel-list__item-link">
           <h4 class="novel-list__item-title"><span class="font-serif">第二章　あなたは孤独ではない</span></h4>
           <span class="novel-list__catchcopy">雨音に紛れて歓声が聞こえた。腹の底から歌うような喜びの声だった。</span>
         </a>
@@ -62,7 +61,6 @@
   </section>
 </div>
 <hr>
-{% endcomment %}
 <header class="novel-list__category-header">
   <h3 class="novel-list__title font-serif">掌編・短編小説（一話完結）</h3>
 </header>
