小説一覧への竜嫁追加準備

--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -59,6 +59,59 @@
       </article>
     </div>
   </section>
+  {% comment %}
+  <section class="novel-list__section is-tree">
+    <header class="novel-list__header">
+      <h3 class="novel-list__title font-serif">竜の花嫁：試し読み</h3>
+      <p class="novel-list__description">熱帯雨林の樹木変身譚『すべての樹木は光』より、冒頭の約4万字をWeb上で公開しています。<br>本編は書籍の形で完結済みです。およそ3分の一地点、物語のターニングポイントまでをお読みいただけます。</p>
+      <a href="/book/bride" class="btn btn--small btn--pale"><span>書籍紹介へ</span></a>
+    </header>
+    <div class="list novel-list">
+      <article class="novel-list__item">
+        <a href="/book/trees_light/introduction" class="unstyle novel-list__item-link">
+          <h4 class="novel-list__item-title"><span class="font-serif">イントロダクション</span></h4>
+          <span class="novel-list__catchcopy">透明な街、うつくしい街、ちょうど日付が変わる頃のこと。</span>
+        </a>
+      </article>
+      <article class="novel-list__item">
+        <a href="/book/trees_light/introduction#section1" class="unstyle novel-list__item-link">
+          <h4 class="novel-list__item-title"><span class="font-serif">第一章　嫁入りの日</span></h4>
+          <span class="novel-list__catchcopy">「……この町では鉢植えをベッドに寝かせるの？」</span>
+        </a>
+      </article>
+      <article class="novel-list__item">
+        <a href="/book/trees_light/introduction#section2" class="unstyle novel-list__item-link">
+          <h4 class="novel-list__item-title"><span class="font-serif">第二章　金の瞳、遠雷の声</span></h4>
+          <span class="novel-list__catchcopy">雨音に紛れて歓声が聞こえた。腹の底から歌うような喜びの声だった。</span>
+        </a>
+      </article>
+      <article class="novel-list__item">
+        <div class="novel-list__item-unlink">
+          <h4 class="novel-list__item-title"><span class="font-serif">第三章　雨と眠りに安らぐもの<small class="op_7">（書籍収録）</small></span></h4>
+          <span class="novel-list__catchcopy">この町に、ゲアの兄のことをはっきりと覚えてる奴は誰もいないんだ。</span>
+        </div>
+      </article>
+      <article class="novel-list__item">
+        <div class="novel-list__item-unlink">
+          <h4 class="novel-list__item-title"><span class="font-serif">第四章　かつて殺されたすべての私たちへ<small class="op_7">（書籍収録）</small></span></h4>
+          <span class="novel-list__catchcopy">ユハはこの家が好きだった。母の帰りを一人待ち続ける、狭く寂しい首都の家よりも、ずっと。</span>
+        </div>
+      </article>
+      <article class="novel-list__item">
+        <div class="novel-list__item-unlink">
+          <h4 class="novel-list__item-title"><span class="font-serif">第五章　野火迫る<small class="op_7">（書籍収録）</small></span></h4>
+          <span class="novel-list__catchcopy">ユハはこの家が好きだった。母の帰りを一人待ち続ける、狭く寂しい首都の家よりも、ずっと。</span>
+        </div>
+      </article>
+      <article class="novel-list__item">
+        <div class="novel-list__item-unlink">
+          <h4 class="novel-list__item-title"><span class="font-serif">第六章　竜の花嫁<small class="op_7">（書籍収録）</small></span></h4>
+          <span class="novel-list__catchcopy">ユハはこの家が好きだった。母の帰りを一人待ち続ける、狭く寂しい首都の家よりも、ずっと。</span>
+        </div>
+      </article>
+    </div>
+  </section>
+  {% endcomment %}
 </div>
 <hr>
 <header class="novel-list__category-header">
