「ノクターン」調整

--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -225,6 +225,15 @@
           </ul>
         </a>
       </article>
+      <article class="novel-list__item">
+        <a href="/novel/nocturne" class="unstyle novel-list__item-link" >
+          <h4 class="novel-list__item-title"><span class="font-serif">ノクターン</span></h4>
+          <span class="novel-list__catchcopy">旅先へギターを連れてゆくのが好きだ。それも一人旅のときに。</span>
+          <ul class="novel-category">
+            <li>依頼テーマ「何らかの弦楽器を弾いてる小説」</li>
+          </ul>
+        </a>
+      </article>
     </div>
   </section>
 
