『十一月の春の夢』書誌情報の追加

--- a/_includes/section-books.liquid
+++ b/_includes/section-books.liquid
@@ -1,4 +1,5 @@
-{%- assign novels-info-title = '『walking postcard vol.6』, 
+{%- assign novels-info-title = '『十一月の春の庭』, 
+『walking postcard vol.6』, 
 『彼らは唯の夢』, 
 『すべての樹木は光』, 
 『永遠の不在をめぐる』, 
@@ -6,9 +7,10 @@
 『竜の花嫁』, 
 『旅人よ立ち止まれ』, 
 『紙飛行機に眠る月』' | split: ', ' -%}
-{%- assign novels-info-handle = 'postcard-6, dream, tree, eien, aoakane, ryuyome, tabibito, airplane' | split: ', ' -%}
-{%- assign novels-info-size = 'big, small, normal, small, small, small, big, small' | split: ', ' -%}
-{%- assign novels-info-detail = '2022.11.20刊行, 
+{%- assign novels-info-handle = 'november, postcard-6, dream, tree, eien, aoakane, ryuyome, tabibito, airplane' | split: ', ' -%}
+{%- assign novels-info-size = 'small, big, small, normal, small, small, small, big, small' | split: ', ' -%}
+{%- assign novels-info-detail = '2023.11.10刊行, 
+2022.11.20刊行, 
 2021.11.23刊行, 
 2020.11.22刊行, 
 2015.11.23刊行, 
