『十一月の春の庭』FV追加

--- a/_includes/snippet-firstview-item.liquid
+++ b/_includes/snippet-firstview-item.liquid
@@ -34,3 +34,15 @@
     </div>
   </div>
 </div>
+<div class="home__firstview-bg home__firstview-item hidden">
+  <figure class="home__firstview-image for-dream">
+    <img src="/assets/img/mv_vacation.jpg" srcset="/assets/img/mv_november_sp.jpg 767w, /assets/img/mv_november_pc.jpg 1280w" sizes="(max-width: 767px) 250px, 100vw" alt="" width="2000">
+    <figcaption>書籍表紙写真：<a href="https://unsplash.com/@evieshaffer?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noopenner noreferrer">Evie S.</a> on <a href="https://unsplash.com/photos/pink-and-blue-silver-dollar-eucalyptus-leaves-on-white-surface-vz3IQy0LOaA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noopenner noreferrer">Unsplash</a></figcaption>
+  </figure>
+  <div class="home__firstview-image__txt font-serif-jp">
+    <p>人間は扉が好きだ。扉の向こうに物語を夢見る。輝かしい夏への扉、魔法の国に通じる衣装箪笥の扉、扉の先にあるかもしれない、此処とは異なるどこかの世界。そんなものは存在しないと分かっていても、夢を見ずにはいられない——<br>いいや、違う、そんなものは存在しないと分かっているから、安心して物語を託せるのだ。</p>
+    <div class="home__firstview-morelink">
+      <a href="/book/november/">『十一月の春の庭』<span>詳細ページへ</span></a>
+    </div>
+  </div>
+</div>
