『十一月の春の庭』試し読み追加

--- a/_includes/layout-novel.liquid
+++ b/_includes/layout-novel.liquid
@@ -20,6 +20,8 @@ template: novelPage
         <p>短編集『<a href="/book/paperplane">紙飛行機に眠る月</a>』掲載作品</p>
       {%- elsif tag == 'book-dream' -%}
         <p>短編集『<a href="/book/dream">彼らは唯の夢</a>』掲載作品</p>
+      {%- elsif tag == 'book-november' -%}
+        <p>短編集『<a href="/book/november">十一月の春の庭</a>』掲載作品</p>
       {%- endif -%}
     {%- endfor -%}
     {%- if improvise_theme != blank -%}
