--- a/_includes/info-november.liquid
+++ b/_includes/info-november.liquid
@@ -2,11 +2,12 @@
 <p class="book-info__copy">ごらんよ。入れ替わり立ち替わり、新たな物語がやってくるのを。</p>
 <p class="font-sansserif-jp">人間は扉が好きだ。扉の向こうに物語を夢見る。<br>輝かしい夏への扉、魔法の国に通じる衣装箪笥の扉、扉の先にあるかもしれない、此処とは異なるどこかの世界。<br>そんなものは存在しないと分かっていても、夢を見ずにはいられない——<br>いいや、違う、そんなものは存在しないと分かっているから、安心して物語を託せるのだ。</p>
 <p>◇　◆　◇</p>
-<p>2022年11月〜12月に掛けてTwitterへ投稿した「#novelmber」掌編の再録短編集です。<br>
+<p>2022年11月〜12月に掛けてTwitterへ投稿した「<a href="https://twitter.com/nike_nkx/status/1575362728063307781" target="_blank" rel="noopenner noreferrer">#novelmber</a>」掌編の再録短編集です。<br>
 二つのお題を組みあわせ、その偶然性を楽しみながら書き綴った掌編18本。<br>
 幻想と魔法にすこしSFも乗せて、さまざまな文体でお届けします。<br>
 公開当時に読んでくれた方にも、未読の方にも、どうぞ楽しんでいただけますように。<br>
 ※再録にあたって、全作品に加筆修正を加えています</p>
+<p><a href="https://twitter.com/feelingskyblue/status/1592897848093609985" target="_blank" rel="noopenner noreferrer">投稿当時（加筆修正前）の掌編ツイート群はこちら</a>からどうぞ。</p>
 <ul class="list__flex">
   <li><a href="https://kokyushobo.booth.pm/items/5226256" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a></li>
   <!--<li><a href="https://store.retro-biz.com/i19729.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：架空ストア（外部サイトへ）</a></li>-->
@@ -17,7 +18,7 @@
     <h4>＜収録作品＞</h4>
   </header>
   <ul class="list__style--dot">
-    <li>ありとあらゆる扉の先に</li>
+    <li><a href="/novel/door-again/">ありとあらゆる扉の先に</a></li>
     <li>衛星たち</li>
     <li>パレードが続く限り</li>
     <li>ＣＱ・ＣＱ</li>
@@ -25,11 +26,11 @@
     <li>あのとき王子様が</li>
     <li>無限は永遠に微笑む</li>
     <li>二十二世紀のファンタジー</li>
-    <li>死よりも遥かに柔く</li>
+    <li><a href="/novel/haruka/">死よりも遥かに柔く</a></li>
     <li>天国と呼ぶには遠い</li>
     <li>わたしたちの滅びた後に</li>
     <li>あなたが踏まれずに済むように</li>
-    <li>再生</li>
+    <li><a href="/novel/reborn/">再生</a></li>
     <li>秘密の他には何も</li>
     <li>ひとの形をした鏡</li>
     <li>アフマートヴァに</li>
